style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,300&display=swap');

:root{
    --dark-bg: #1f2937;
    --quote-bg: #e5e7eb;
    --action:#3882f6;
}
body{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Roboto',sans-serif;
}
.body-con{
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 100%;
}

/* HEADER SECTIONS */
.header-con{
    background-color: var(--dark-bg);
    flex:1;
    display: flex;
    flex-direction: column;
    padding: 0 25%;
}
    /* BANNER OF HEADER SECTION */
.banner{

    display: flex;
    flex: 1;
    align-items: center;
}
.logo{
    color: #f9faf8;
    font-size: 24px;
    font-weight: 700;
    flex: 1;
}
ul{

    list-style-type: none;
    flex: 1;
    display: flex;
    justify-content: flex-end;
    padding:0px;
}
li{
    margin-left: 20px;
    color: #e5e7eb
}
a{
    color: #e5e7eb;
    text-decoration: none;
}
    /* CONTENT SECTION OF THE HEADER */
.contents{
    display: flex;
    color: #e5e7eb;
    height: 250px;
    padding: 100px 0;
}
.content-text{
    flex: 1;
    flex-direction: column;
    justify-content: space-between;
    padding-right: 20px;
}
.title-content{
    color: #f9faf8;
    font-size: 48px;
    font-weight: 900;
    margin-bottom: 20px;
}
.description{
    font-size: 18px;
}

        /* HEADER BUTTON */
.header-button{
    display: inline-block;
    background-color: var(--action);
    padding: 10px 20px;
    font-weight: 700;
    font-size: 16px;
    border-radius: 8px;
    border: none;
    color: #f9faf8;
    margin-top: 15px;
}
.header-button:hover{
    opacity: 1;
    background-color: #6c9ce9;
}
.header-button:active{
    background-color: #3e6cb6;
    border: 1px #000000 solid;
}

.img-container{
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgb(100, 105, 105);
}

/* INFORMATION SECTION */
.info-con{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.header-info{
    font-size: 36px;
    font-weight: 900;
    color: #1f2937;
    margin: 40px;
}

    /* BOXES */
.boxes-container{
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    padding-bottom: 50px;
    gap: 60px;
    
}
.box-con{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 125px;
    text-align: center;
}
.box{
    border: 3px solid var(--action);
    border-radius: 8px;
    height: 125px;
    width: 125px;
    margin-bottom: 8px;
}
.box-desc{
    color: #2f3641;
    font-size: 14px;
    font-weight: 400;
}

/* QUOTE AREA */
.quote-sec-con{
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 100px 28%;

    background-color: var(--quote-bg);
}

.quote-con{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    
}
.quote{
    font-size: 36px;
    font-style: italic;
    font-weight: 300;
    color: #1f2937;
}

.quote-footer{
    flex: 1;
    width: 100%;
    font-weight: 700;
    text-align: right;
}

/* CALL TO ACTION SECTION */

.action-con{
padding:80px 30%;
}
.call-con{
    background-color: #3882f6;
    justify-content: center;
    display: flex;
    padding: 30px 0;
    border-radius: 8px;
}
.call-text{
    width: 75%;
    color: #f9faf8;
}

.action-title{
    font-size: 16px;
    font-weight:700 ;
}
        /* ACTION BUTTON */
.action-button{
    border: 1px solid white;
    background-color: #3882f6;
    border-radius: 8px;
    color: #f9faf8;
    padding:10px 20px ;
}
.action-button:hover
{
  opacity: 1;
  background-color: #6c9ce9;
}

.action-button:active
{
    background-color: #3e6cb6;
    border: 1px #000000 solid;
}

/* FOOTER SECTION */
.footer{
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--dark-bg);
    padding: 30px;
    color: #f9faf8;
}

